--- a/etcd/kubelet.service.d_20-etcd-service-manager.conf
+++ b/etcd/kubelet.service.d_20-etcd-service-manager.conf
@@ -2,5 +2,5 @@
 ExecStart=
 # Replace "systemd" with the cgroup driver of your container runtime. The default value in the kubelet is "cgroupfs".
 # Replace the value of "--container-runtime-endpoint" for a different container runtime if needed.
-ExecStart=/usr/bin/kubelet --config=/var/lib/kubelet/config.yaml --container-runtime=remote --container-runtime-endpoint=unix:///run/containerd/containerd.sock
+ExecStart=/usr/bin/kubelet --address=127.0.0.1 --pod-manifest-path=/etc/kubernetes/manifests --cgroup-driver=systemd --config=/var/lib/kubelet/config.yaml --container-runtime=remote --container-runtime-endpoint=unix:///run/containerd/containerd.sock
 Restart=always
