--- a/server-vpn-backup/keepalived1.conf
+++ b/server-vpn-backup/keepalived1.conf
@@ -4,6 +4,7 @@ global_defs {
   vrrp_skip_check_adv_addr
   vrrp_garp_interval 0.001
   vrrp_gna_interval 0.000001
+  enable_script_security
 }
  
 vrrp_script check_vpnserver {
@@ -36,8 +37,4 @@ vrrp_instance wireguard-vip {
   track_script {
     check_vpnserver
   }
-  notify_master "/etc/keepalived/scripts/keepalived_notify.sh"
-  notify_backup "/etc/keepalived/scripts/keepalived_notify.sh"
-  notify_fault "/etc/keepalived/scripts/keepalived_notify.sh"
-}
 }
