--- a/master/kubeadm-config.yaml
+++ b/master/kubeadm-config.yaml
@@ -1,16 +1,13 @@
 apiVersion: kubeadm.k8s.io/v1beta3
 kind: ClusterConfiguration
 kubernetesVersion: stable
-apiServer:
-  certSANs:
-  - "192.168.0.1"
-controlPlaneEndpoint: "192.168.0.1:6443"
+controlPlaneEndpoint: "192.168.0.1:6443" # change this (see below)
 etcd:
-    external:
-        endpoints:
-        - https://192.168.0.2:2379
-        - https://192.168.0.3:2379
-        - https://192.168.0.4:2379
-        caFile: /etc/kubernetes/pki/etcd/ca.crt
-        certFile: /etc/kubernetes/pki/apiserver-etcd-client.crt
-        keyFile: /etc/kubernetes/pki/apiserver-etcd-client.key
+  external:
+    endpoints:
+      - https://192.168.0.2:2379 # change ETCD_0_IP appropriately
+      - https://192.168.0.3:2379 # change ETCD_1_IP appropriately
+      - https://192.168.0.4:2379 # change ETCD_2_IP appropriately
+    caFile: /etc/kubernetes/pki/etcd/ca.crt
+    certFile: /etc/kubernetes/pki/apiserver-etcd-client.crt
+    keyFile: /etc/kubernetes/pki/apiserver-etcd-client.key
